# Django-ChatGPT-test

./: .gitignore  README.md  pyproject.toml  test.py
proofreading/: apps.py  urls.py  utils.py  views.py
proofreading/static/css/: loading_style.css  style.css
proofreading/templates/proofreading/: base.html  grammar_correction.html
server/: settings.py  urls.py
template/: GrammarCorrection.txt
