[tool.poetry]
name = "django-michihiki"
version = "0.1.0"
description = ""
authors = ["taku820801 <takuchanpower@gmail.com>"]
readme = "README.md"
packages = [{include = "django_michihiki"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
environ = "^1.0"
django-environ = "^0.10.0"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
